:rocket: add footer

--- a/index.html
+++ b/index.html
@@ -88,12 +88,88 @@
     </header>
 
     <main class="page">
-      <div class="articles"></div>
+      <div class="articles">
+        <article class="list__article">
+          <header>
+            <p class="list__article-date">23 avril 2022</p>
+            <h1 class="list__article-title">
+              Lorem ipsum dolor sit amet consectetur
+            </h1>
+          </header>
 
-      <aside></aside>
+          <main>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu et sem
+              aliquet tortor, ac purus velit in. Et, potenti augue facilisis
+              adipiscing integer faucibus. At a malesuada placerat metus mattis
+              placerat augue at dignissim. Adipiscing tempor blandit libero
+              quisque ullamcorper.
+            </p>
+
+            <a href="#" class="list__article-link button">Read more</a>
+          </main>
+        </article>
+
+        <article class="list__article">
+          <header>
+            <p class="list__article-date">23 avril 2022</p>
+            <h1 class="list__article-title">
+              Lorem ipsum dolor sit amet consectetur
+            </h1>
+          </header>
+
+          <main>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eu et sem
+              aliquet tortor, ac purus velit in. Et, potenti augue facilisis
+              adipiscing integer faucibus. At a malesuada placerat metus mattis
+              placerat augue at dignissim. Adipiscing tempor blandit libero
+              quisque ullamcorper.
+            </p>
+
+            <a href="#" class="list__article-link button">Read more</a>
+          </main>
+        </article>
+      </div>
+
+      <aside class="aside">
+        <h1>About me</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Metus vitae
+          morbi eget tortor, scelerisque eleifend nulla cursus eu. Quisque morbi
+          scelerisque pharetra enim arcu, duis lectus. In sed tincidunt gravida
+          ac. Vestibulum purus laoreet.
+        </p>
+
+        <p><a href="#" class="button small">Contact me</a></p>
+      </aside>
     </main>
 
-    <footer class="footer"></footer>
+    <section class="prefooter">
+      <form method="GET">
+        <h1>Restez informés</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed
+          vitae donec iaculis tincidunt nisi nam arcu porta.
+        </p>
+
+        <label class="field">
+          <span>Votre email</span>
+          <input type="email" placeholder="email@domain.tld" />
+        </label>
+
+        <label>
+          <input type="checkbox" />
+          J'accepte de transmettre mes données
+        </label>
+
+        <button type="submit" class="button">S'abonner à la newsletter</button>
+      </form>
+    </section>
+
+    <footer class="footer">
+      <p>© Aperture 2022 - Mentions légales</p>
+    </footer>
 
     <script>
       lucide.createIcons();
